--- a/src/main/resources/templates/client/hotel.html
+++ b/src/main/resources/templates/client/hotel.html
@@ -294,6 +294,9 @@
     </div>
 </footer>
 
+<!-- Notification Modal -->
+<div th:replace="client/fragments :: notificationModal"></div>
+
 <!-- Scripts -->
 <script src="/js/jquery.js" defer></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/js/fontawesome.min.js" integrity="sha512-SYzE0xw/2qjYp+Mz3J5RGKULJoIRCZwlM4QLmFRnOeXBr7bwrjPBPFQZuXeCRYUzgA0czAP2DnNYt1HGzNUbXg==" crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
