feat(UI Enhancements): Introduce a new favicon and a 404 error page with animated background and improved styling. Update error handling in GlobalExceptionHandler and enhance sidebar functionality in client pages.

--- a/src/main/resources/static/client/hotel-details.css
+++ b/src/main/resources/static/client/hotel-details.css
@@ -66,7 +66,10 @@
 
 #closeLoginModal,
 #closeSignupModal,
-#closePaymentModal {
+#closePaymentModal,
+#closeNotificationModal,
+#closeFilterBtn,
+#closeReservationsBtn{
     position: absolute;
     top: 1rem;
     right: 1rem;
