Add hotel, room types, reviews, listing

--- a/src/main/resources/templates/client/hotel.html
+++ b/src/main/resources/templates/client/hotel.html
@@ -102,15 +102,15 @@
     </section>
 
     <!-- FAQ Section -->
-    <section class="faqs" aria-labelledby="faqs-title">
-        <h2 class="faqs-title" id="faqs-title">Frequently Asked Questions</h2>
-        <div class="faq-list" id="faqList">
+    <section class="questions" aria-labelledby="questions-title">
+        <h2 class="questions-title" id="questions-title">Frequently Asked Questions</h2>
+        <div class="question-list" id="faqList">
             <a class="hidden" href="#faqForm" id="writeFAQ">
                 <button class="btn btn-primary view-details-btn">Have a question for this hotel?</button>
             </a>
         </div>
-        <form class="hidden form-container" id="faqForm" aria-labelledby="faq-form-title">
-            <h3 id="faq-form-title" class="form-title">Ask a Question</h3>
+        <form class="hidden form-container" id="faqForm" aria-labelledby="question-form-title">
+            <h3 id="question-form-title" class="form-title">Ask a Question</h3>
             <div class="form-group">
                 <label class="form-label" for="faqQuestion">Your Question</label>
                 <input
